--- a/index.css
+++ b/index.css
@@ -26,8 +26,7 @@
     }
 
     .ExcelImage {
-        margin-left: 0;
-        margin-top: 20px;
+        display: none;
     }
 }
 
@@ -113,30 +112,25 @@ body {
 
 }
 
-
-
-.ExcelImage{
-    margin-left: 320px;
-}
-
 .EfeitoImagem01{
     margin-left: -30px;
     position: relative;
     z-index: 2;
 }
 
+CaixaImagem{
+    max-width: 500px;
+    height: auto;
+}
+
 .imagemExcel{
     width: 350px; 
     height: 350px;
-    vertical-align: center; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
+    margin-top: 10px;
     max-width: 100%;
     height: auto;
-   
 }
+
 
 .BoxMain{
     display: flex;
@@ -218,6 +212,17 @@ body {
 
 }
 
+.Comousar{
+    max-height: 300px;
+    max-width: 600px;
+    background-color: #385723;
+    border-radius: 12px;
+    font-family: 'HelveticaLight', sans-serif;
+    padding: 12px 16px;
+    display: flex;
+
+}
+
 .animacaoChat {
     display: flex;
     flex-direction: column;
@@ -227,7 +232,7 @@ body {
 
 .chat-box:not(.hidden) {
     display: flex;
-  }
+}
 
 .message {
     max-width: 90%;
@@ -239,9 +244,9 @@ body {
     animation: fadeInUp 0.3s ease-out;
     box-shadow: 0 2px 4px rgba(0,0,0,0.05);
     
-  }
+}
   
-  .message.user {
+.message.user {
     align-self: flex-end;
     background-color: #385723;
     color: white;
@@ -326,6 +331,16 @@ body {
 
 }
 
+.ExcelImage{
+    position: absolute;
+    right: 5%; 
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
+    max-width: 300px; 
+
+}
+
 .logo {
     width: 140px; 
     height: auto;
@@ -396,19 +411,6 @@ body {
         margin-left: 0;
     }
 
-    .ExcelImage {
-        margin-left: 0;
-        margin-top: 20px;
-        max-width: 100%;  
-        height: auto;
-    }
-
-    .imagemExcel {
-        width: 100%; 
-        max-width: 350px;  
-        height: auto;
-    }
-
     .caixa {
         flex-direction: column;
         align-items: center;
@@ -450,9 +452,6 @@ body {
     text-align: right;
 }
 
-.ExcelImage {
-    margin-left: 320px;
-}
 
 .EfeitoImagem01 {
     margin-left: -30px;
@@ -460,17 +459,7 @@ body {
     z-index: 2;
 }
 
-.imagemExcel {
-    width: 350px;
-    height: 350px;
-    vertical-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    max-width: 100%;
-    height: auto;
-}
+
 
 .BoxMain {
     display: flex;
@@ -696,6 +685,8 @@ body {
     max-height: 150px;
     overflow: hidden;
 }
+
+
 
 
 
